--- a/package.json
+++ b/package.json
@@ -2,21 +2,14 @@
   "name": "emoji-picker",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.7",
-    "@types/react": "16.9.3",
-    "@types/react-dom": "16.9.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint:fix": "npm run lint -- --fix",
+    "emoji:build-data": "npx ts-node scripts/build-data.ts"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +25,32 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@types/classnames": "2.2.9",
+    "@types/styled-components": "4.1.19",
+    "classnames": "2.2.6",
+    "emoji-datasource": "4.1.0",
+    "emojilib": "2.4.0",
+    "mobx": "5.13.1",
+    "mobx-react": "6.1.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.2",
+    "styled-components": "4.4.0",
+    "typescript": "3.6.3"
+  },
+  "devDependencies": {
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.8",
+    "@types/react": "16.9.3",
+    "@types/react-dom": "16.9.1",
+    "@typescript-eslint/eslint-plugin": "2.3.1",
+    "@typescript-eslint/parser": "2.3.1",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-config-react": "1.1.7",
+    "eslint-plugin-prettier": "3.1.1",
+    "prettier": "1.18.2",
+    "ts-node": "8.4.1"
   }
 }
